# pharmacy_management_system

./: .gitignore  app-flow.md  architecture.md  auth_ERD.md  catalog_ERD.md  compose.yaml  info.md  inventory_ERD.md  learning_points.md  pos_ERD.md  prescription_ERD.md  readme.md  supplier_ERD.md
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx
app/components/: add-product-modal.tsx  alert-card.tsx  app-shell.tsx  header.tsx  inventory-summary-card.tsx  inventory-table.tsx  recent-activity.tsx  sidebar.tsx  stat-card.tsx
app/data/: mock-purchases.ts
backend/: Dockerfile  Dockerfile.dev  config.py  database.py  main.py  pyproject.toml
backend-fastapi/: Dockerfile.dev  config.py  database.py  main.py
backend-fastapi/auth/: dependency.py  security.py
backend-fastapi/models/: category.py  medicine.py  product_batch.py  (+4 more)
backend-nodejs/: app.ts  package-lock.json  package.json  prisma.config.ts  server.ts
backend/auth/: dependency.py  security.py
backend/models/: category.py  product.py  supplier.py  tenant.py  users.py
backend/repository/: product_repository.py
backend/routers/: auth.py  category.py  product.py  supplier.py  user.py
backend/schemas/: category_schema.py  product_schema.py  supplier_shema.py  tenant_schema.py  user_schema.py
backend/service/: auth_service.py  category_service.py  product_service.py  supplier_service.py  user_service.py
details/: notification_ERD.md  report_ERD.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
(+101 files in other folders)
